--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "~16.11.6",
     "@typescript-eslint/eslint-plugin": "~5.7.0",
     "@typescript-eslint/parser": "~5.7.0",
-    "eslint": "~8.4.1",
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "~16.1.0",
     "eslint-config-prettier": "~8.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "~25.3.0",
     "jest": "~27.4.4",
     "nodemon": "^2.0.15",
@@ -24,9 +27,8 @@
   },
   "scripts": {
     "start": "node build/src/main.js",
-    "start:dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
+    "start:dev": "NODE_ENV=development nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "clean": "rimraf coverage build tmp",
-    "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
@@ -34,6 +36,9 @@
   },
   "author": "Brian Vogelgesang <kida001@users.noreply.github.com>",
   "dependencies": {
+    "@sentry/node": "^6.17.2",
+    "axios": "^0.25.0",
+    "dotenv": "14.3.2",
     "express": "^4.17.2",
     "tslib": "~2.3.1"
   }
