--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "noUnusedParameters": true,
     "noImplicitAny": false,
     "noImplicitThis": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "rootDir": ".",
+    "outDir": "tmp"
   },
   "include": [
     "src/**/*",
