--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.25.0",
     "dotenv": "14.3.2",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
     "tslib": "~2.3.1"
   }
 }
