Harmony Block Processing + Firebase: Adds firebase support to pull list of subscribed addresses from Firebase Adds Redis support for caching Add functionality for Processing transactions from Block

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
     "no-console": 0,
     "import/prefer-default-export": 0,
     "func-names": 0,
-    "@typescript-eslint/no-use-before-define": 0
+    "@typescript-eslint/no-use-before-define": 0,
+    "no-continue": 0
   }
 }
