--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/jest": "~27.0.2",
     "@types/node": "~16.11.6",
+    "@types/redis": "^4.0.11",
     "@typescript-eslint/eslint-plugin": "~5.7.0",
     "@typescript-eslint/parser": "~5.7.0",
     "eslint": "^8.7.0",
@@ -39,9 +40,13 @@
   "dependencies": {
     "@sentry/node": "^6.17.2",
     "axios": "^0.25.0",
+    "bech32-converting": "^1.0.8",
     "dotenv": "14.3.2",
+    "eth-log-parser": "^0.1.0",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
-    "tslib": "~2.3.1"
+    "redis": "^4.0.3",
+    "tslib": "~2.3.1",
+    "web3": "^1.7.0"
   }
 }
