--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "typescript": "~4.5.3"
   },
   "scripts": {
-    "start": "node build/src/main.js",
+    "start": "pm2-runtime start ecosystem.config.js --deep-monitoring",
     "start:dev": "NODE_ENV=development nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
+    "preinstall": "if [ $CIRCLECI=\"1\" ]; then echo 1; else echo npm install pm2 -g; fi",
     "clean": "rimraf coverage build tmp",
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
@@ -45,6 +46,7 @@
     "eth-log-parser": "^0.1.0",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.2",
+    "pm2": "^5.2.0",
     "redis": "^4.0.3",
     "tslib": "~2.3.1",
     "web3": "^1.7.0"
