--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "import/prefer-default-export": 0,
     "func-names": 0,
     "@typescript-eslint/no-use-before-define": 0,
-    "no-continue": 0
+    "no-continue": 0,
+    "no-param-reassign": [2, { "props": false }]
   }
 }
